@@ -639,6 +639,8 @@
 #define FCEUX_CONTEXT_UNDOSAVESTATE     40324
 #define ID_GAME_UNDOSAVESTATE40325      40325
 #define ID_GAME_UNDOSAVESTATE40326      40326
+#define ID_NOGAME_OPENMOSTRECENTROM     40327
+#define FCEUX_CONTEXT_RECENTROM1        40328
 #define IDC_DEBUGGER_ICONTRAY           55535
 #define MW_ValueLabel2                  65423
 #define MW_ValueLabel1                  65426
@@ -648,7 +650,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        125
-#define _APS_NEXT_COMMAND_VALUE         40327
+#define _APS_NEXT_COMMAND_VALUE         40329
 #define _APS_NEXT_CONTROL_VALUE         1199
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
